Dark mode mobile fix, image update.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,7 +181,7 @@ html {
 }
 
 body {
-  background: #ffffff;
+  background: #eeeeee;
   height: 100%;
   min-width: 320px;
 }
@@ -753,7 +753,7 @@ table {
 
   .box.style2 {
     padding: 1.5em 1.25em 1.5em 1.25em;
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(57, 69, 75, 0.9); /*initially white 0,0,0 for light mode*/
   }
 }
 
